# GameOfLife

./: CMakeLists.txt  README.md  main.cpp
Diagrams/: Diagramme de classe.mmd  Diagramme de séquence.mmd  README.md
lib/Font/: README.md
lib/GameOfLife/: GameOfLife.h
lib/GameOfLife/CLI/: Arguments.cpp  Arguments.h  Main.cpp  Main.h
lib/GameOfLife/File/: BaseParser.h  ExtendedParser.cpp  ExtendedParser.h  FormatConfig.h  IWritable.h  Parser.cpp  Parser.h  Utils.cpp  Utils.h  Writer.cpp  Writer.h
lib/GameOfLife/GUI/: Main.cpp  Main.h
lib/GameOfLife/Game/: BaseCell.cpp  BaseCell.h  BaseGrid.cpp  BaseGrid.h  Cell.cpp  Cell.h  ExtendedGrid.cpp  ExtendedGrid.h  Grid.cpp  Grid.h  HashFunction.h  HighPerformanceGrid.cpp  HighPerformanceGrid.h
lib/GameOfLife/Tests/: UnitTests.cpp  UnitTests.h  test.cells  test.txt
lib/Patterns/: _README_.txt
